--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<!-- Write your code here! -->
+<h1>My HTML adventure</h1>
+<p>Let's get <strong>strong</strong> and <em>emphasized</em> up in here.
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a></p>
+<table></table>
